Updating api docs put does not work as intended
